ingress/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-blue
spec:
  selector:
    app: web-blue
  ports:
  - port: 80  
    targetPort: 80
