ingress/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-green
spec:
  selector:
    app: web-green
  ports:
  - port: 80
    targetPort: 8080
