ingress/ingress-dominio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: blue.127.0.0.1.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-blue
              port: 
                number: 80
    - host: green.127.0.0.1.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-green
              port: 
                number: 80
