ingress/ingress-rotapadrao.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: padrao-ingress

spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
